
This method will be removed in the symfony 1.4.

Forms
-----

### `sfForm::useFields()`

The new `sfForm::useFields()` method removes all fields from a form except the
ones given as an argument. It is sometimes easier to explicitly give the
fields you want to keep in a form, instead of unsetting all unneeded fields.
For instance, when adding new fields to a base form, they won't automagically
appears in your form until explicitly added (think of a model form where you
add a new column to the related table).

    [php]
    class ArticleForm extends BaseArticleForm
    {
      public function configure()
      {
        $this->useFields(array('title', 'content'));
      }
    }

By default, the array of fields is also used to change the fields order. You
can pass `false` as the second argument to `useFields()` to disable the
automatic reordering.

### `sfForm(Doctrine|Propel)::doUpdateObject()`

The Doctrine and Propel form classes now include an easy-to-overload
`->doUpdateObject()` method. This method includes a mandatory `$values`
parameter, whereas this argument is optional in `->updateObject()`.

### `sfFormSymfony`

The Form component has been extended with a class that includes
symfony-specific functionality. For instance, you can now call
`$form->bindRequest($request)` from an action, as `sfFormSymfony` is aware of
the `sfWebRequest` class.

### `BaseForm`

Every new symfony 1.3 project includes a `BaseForm` class that you can use to
extend the Form component or add project-specific functionality. The forms
generated by `sfDoctrinePlugin` and `sfPropelPlugin` automatically extend this
class. If you create additional form classes they should now extend `BaseForm`
rather than `sfForm`.

Validators
----------

### Default Error Messages

You can now define default error messages globally by using the
`sfForm::setDefaultMessage()` method:

    [php]
    sfValidatorBase::setDefaultMessage('required', 'This field is required.');
